Update 褒め作成用のエンドポイントを作成
